Updated replicates/main dataset distinction. Updated logging.ini

--- a/scripts/runtime_benchmark/logging.ini
+++ b/scripts/runtime_benchmark/logging.ini
@@ -17,7 +17,7 @@ keys=consoleHandler
 
 [handler_consoleHandler]
 class=StreamHandler
-level=INFO
+level=DEBUG
 formatter=complexFormatter
 args=(sys.stdout,)
 
