--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,5 @@
 [submodule "submodules/clv_fork"]
 	path = submodules/clv_fork
 	url = https://github.com/gibsonlab/clv_fork.git
+	branch = master
+	update = rebase
