--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ __pycache__
 sequence_analysis/tmp/
 sequence_analysis/raw_reads/
 sequence_analysis/taxa/silva/
+datasets/gibson/metadata_OTU/plots/
