added logging for mdsine2 analysis.

--- a/scripts/analysis/logging_to_file.ini
+++ b/scripts/analysis/logging_to_file.ini
@@ -13,7 +13,7 @@ handlers=
 
 # =========== HANDLERS =============
 [handlers]
-keys=consoleHandler
+keys=fileHandler
 
 [handler_fileHandler]
 class=handlers.TimedRotatingFileHandler
