--- a/scripts/analysis/logging_to_file.ini
+++ b/scripts/analysis/logging_to_file.ini
@@ -2,9 +2,9 @@
 keys=root,MDSINELogger
 
 [logger_MDSINELogger]
-level=INFO
+level=DEBUG
 qualname=MDSINELogger
-handlers=fileHandler
+handlers=fileHandler,consoleHandler
 
 # Root must always be defined. Suppress by providing no handlers.
 [logger_root]
@@ -13,7 +13,13 @@ handlers=
 
 # =========== HANDLERS =============
 [handlers]
-keys=fileHandler
+keys=fileHandler,consoleHandler
+
+[handler_consoleHandler]
+class=StreamHandler
+level=DEBUG
+formatter=complexFormatter
+args=(sys.stdout,)
 
 [handler_fileHandler]
 class=handlers.TimedRotatingFileHandler
